<resources>
    <string name="app_name">Prototype</string>
    <string name="inspection_image">Inspection Image</string>
    <string name="no_damages">No Damages</string>
    <string name="done">Done</string>
    <string name="report_more_damages">Report more damages</string>
    <string name="submit_and_go"><![CDATA[Submit & Go]]></string>
    <string name="inspect_title">Inspect the %1$s.</string>
    <string name="tap_car_part">Tap a car part to report damage.</string>
    <string name="tap_car_part_additional">Tap a car part to report additional damage.</string>
    <string name="damage_title">Damage on %1$s %2$s</string>
    <string name="damage_title_without_section">Damage on %1$s</string>
    <string name="damage_qna_title">Select issues with the %1$s</string>
    <string name="confirm_the_damages">Confirm the damages to avoid unwanted charges</string>
    <string name="front_section">Front Section</string>
    <string name="rear_section">Rear Section</string>
    <string name="driver_section">Driver side Section</string>
    <string name="passenger_section">Passenger side Section</string>
    <string name="select_a_section">Select a Section</string>
    <string name="checklist">Checklist</string>
    <string name="next">Next</string>
    <string name="option_first">Start 1</string>
    <string name="option_second">Start 2</string>
</resources>
